added page css, added images

--- a/two.html
+++ b/two.html
@@ -3,9 +3,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="two.css">
     <title>Document</title>
 </head>
 <body>
-    
+  <h1 class="header">Penny Arcade</h1>  
+ 
+  <div class="row">
+    <div class="column">
+        <img src="https://images.unsplash.com/photo-1511882150382-421056c89033?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YXJjYWRlfGVufDB8fDB8fHww" alt="image of arcade machines">
+    </div>
+    <div class="column">
+        <img src="https://images.unsplash.com/photo-1533236897111-3e94666b2edf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGFyY2FkZXxlbnwwfHwwfHx8MA%3D%3D" alt="image of skiball">
+    </div>
+    <div class="column">
+        
+        <img src="https://images.unsplash.com/photo-1630609682318-70047533e3c9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image of grid video game">
+    </div>
+  </div>
+  <div>
+    <h2>About Us</h2>
+    <p></p>
+  </div>
+  <div>
+    <h2>Hours and Rates</h2>
+    <p>
+        <ul></ul>
+    </p>
+  </div>
+  <div>
+    <h2>News and Events</h2>
+    <p></p>
+  </div>
 </body>
 </html>
