added more content

--- a/two.html
+++ b/two.html
@@ -1,39 +1,107 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="two.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="two.css">
+  <title>Document</title>
 </head>
+
 <body>
-  <h1 class="header">Penny Arcade</h1>  
- 
+  <h1 class="header">Penny Arcade</h1>
+
   <div class="row">
     <div class="column">
-        <img src="https://images.unsplash.com/photo-1511882150382-421056c89033?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YXJjYWRlfGVufDB8fDB8fHww" alt="image of arcade machines">
+      <img
+        src="https://images.unsplash.com/photo-1511882150382-421056c89033?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YXJjYWRlfGVufDB8fDB8fHww"
+        alt="image of arcade machines">
     </div>
     <div class="column">
-        <img src="https://images.unsplash.com/photo-1533236897111-3e94666b2edf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGFyY2FkZXxlbnwwfHwwfHx8MA%3D%3D" alt="image of skiball">
+      <img
+        src="https://images.unsplash.com/photo-1533236897111-3e94666b2edf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGFyY2FkZXxlbnwwfHwwfHx8MA%3D%3D"
+        alt="image of skiball">
     </div>
     <div class="column">
-        
-        <img src="https://images.unsplash.com/photo-1630609682318-70047533e3c9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image of grid video game">
+
+      <img
+        src="https://images.unsplash.com/photo-1630609682318-70047533e3c9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="image of grid video game">
     </div>
   </div>
+  <br>
+  <br>
   <div>
     <h2>About Us</h2>
-    <p></p>
+    <p class="bigfont">
+      Welcome to Penny Arcade, the ultimate all-you-can-play arcade experience right here in the mall! At Penny Arcade, we’re dedicated to delivering endless fun and excitement for gamers of all ages. Our vibrant, modern space is packed with a diverse selection of games, from nostalgic classics to cutting-edge new releases. With our all-inclusive play model, you can enjoy unlimited access to every game without worrying about extra coins or tokens. Whether you’re challenging friends, enjoying family time, or just having a blast on your own, Penny Arcade offers a fantastic atmosphere and unbeatable value. Step into a world of fun where the only limit is your imagination—at Penny Arcade, the good times never stop!</p>
   </div>
+  <br>
+  <br>
+  <hr>
   <div>
-    <h2>Hours and Rates</h2>
-    <p>
-        <ul></ul>
+    <h2 >Hours and Rates</h2>
+    <p class="hoursP bigfont">
+      OPEN EVERY DAY!
     </p>
+    <ul class="list bigfont">
+      <li> Monday 12pm-11pm</li>
+      <li> Tuesday 12pm-11pm</li>
+      <li> Wednesday 12pm-11pm</li>
+      <li> Thursday 12pm-11pm</li>
+      <li> Friday 12pm-2am</li>
+      <li> Saturday 12pm-2am</li>
+      <li> Sunday 12pm-11pm</li>
+    </ul>
+
+    <p class="hoursP bigfont">
+      RATES
+    </p>
+
+    <ul class="list bigfont">
+      <li> (entry into arcade per person)</li>
+      <li> ONE HOUR PLAY = $10</li>
+      <li> EACH ADDITIONAL 1/2 HOUR = $5</li>
+      <li> ALL DAY PASS = $25</li>
+      <li> ROAD TRIP PASS = $35</li>
+      <li> (children must have parent present while in our facility)</li>
+    </ul>
+
   </div>
-  <div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div id="newsAndEvents">
     <h2>News and Events</h2>
-    <p></p>
+    <ul class="schedule">
+      <li class="schedule-item">
+          <h2>Monday Mania - Classic Game Tournament</h2>
+          <span>Time:</span> 6:00 PM - 9:00 PM
+          <p class="details">Dive into the golden age of gaming with our Classic Game Tournament! Compete in fan-favorite retro games like Pac-Man, Space Invaders, and Donkey Kong for a chance to win awesome prizes. Perfect for seasoned gamers and newcomers alike.</p>
+      </li>
+      <li class="schedule-item">
+          <h2>Tuesday Family Fun Night</h2>
+          <span>Time:</span> 4:00 PM - 8:00 PM
+          <p class="details">Enjoy a special evening of family-friendly activities and games. With exclusive discounts on group play and a variety of interactive games for all ages, Tuesday Family Fun Night is the ideal way to bond and create memories.</p>
+      </li>
+      <li class="schedule-item">
+          <h2>Wednesday VR Adventure Showcase</h2>
+          <span>Time:</span> 5:00 PM - 10:00 PM
+          <p class="details">Experience the future of gaming with our VR Adventure Showcase. Try out the latest virtual reality games and experiences, guided by our knowledgeable staff. Special promotions on VR game packages available for the night!</p>
+      </li>
+      <li class="schedule-item">
+          <h2>Friday Night Flashback - 80s & 90s Arcade Party</h2>
+          <span>Time:</span> 7:00 PM - 11:00 PM
+          <p class="details">Step back in time with our Friday Night Flashback event! Enjoy a retro-themed arcade experience with music, décor, and costumes from the 80s and 90s. Play classic arcade games and dance to hits from the past. Best dressed wins a prize!</p>
+      </li>
+      <li class="schedule-item">
+          <h2>Saturday High Score Challenge</h2>
+          <span>Time:</span> 2:00 PM - 6:00 PM
+          <p class="details">Show off your skills in our High Score Challenge! Compete to set the highest scores on our leaderboard in various games throughout the arcade. Winners will receive exclusive Penny Arcade merchandise and bragging rights!</p>
+      </li>
+  </ul>
   </div>
 </body>
+
 </html>
