Hamse made spelling corrections

--- a/three.html
+++ b/three.html
@@ -16,7 +16,7 @@
 <br>
 <div class="statement">
     <h1 class="opening" >DINING AND REFRESHMENTS</h1>
-    <p>Whether you're looking for a quick bit or memorable meal to fuel your shopping trip, you're sure to find delicious food from our lineup of restuarents and eateries.</p>
+    <p>Whether you're looking for a quick bite or memorable meal to fuel your shopping trip, you're sure to find delicious food from our lineup of Restaurants and eateries.</p>
 </div>
 <br>
 <br>
@@ -63,7 +63,7 @@
 
 
 <div class="finedine">
-<h2>Fine-Dine Restuarents</h2>
+<h2>Fine-Dine Restaurants</h2>
 <div class="row">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGtml079qMOQJeTNYtmtqT697jRYYJ6dH8wQ&s" alt="per se logo" width="100%">
 </div>
