added nav bar and an image

--- a/home.html
+++ b/home.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- <h1> Welcome To The Grand Atrium</h1> -->
+    <ul>
+        <li id="homeLink" ><a href="home.html">The Grand Atrium</a></li>
+        <li><a href="two.html">Arcade</a></li>
+        <li><a href="three.html">Food Court</a></li>
+        <li><a href="five.html">Movie Theater</a></li>
+        <li><a href="four.html">Solar Technology</a></li>
+      </ul>
+
+      <h1>Welcome To The Grand Atrium</h1>
+      <div class="divBackground">
+            
+      </div>
+      <br>
+      <br>
+      <div class="div1">
+        EAT. WATCH. SHOP. PLAY.
+      </div>
 </body>
 </html>
