Added CSS and Edited CSS and HTML5

--- a/five.html
+++ b/five.html
@@ -4,8 +4,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="five.css">
 </head>
+
 <body>
+    <h1 class="header">Regal Cinemas</h1>
+    <h1 class="header1">at Grand Atrium</h1> 
     
+    <div class="one">
+        <img src="images5/regal theatre 1.jpg" alt="movie theater" width="2600" height="600"> 
+    </div>
+
+    <h1 class="header2">NOW PLAYING</h1>
+
+    <div class="two">
+        <img src="images5/current movie list.JPG" alt="movies playing now" width="2000" height="500">
+    </div>
+
+    <h1 class="header3">COMING SOON</h1>
+
+    <div class="three">
+        <img src="images5/coming soon movie list.JPG" alt="movies coming soon" width="2000" height="500">
+    </div>
 </body>
 </html>
