Tyler-added html/css to page four

--- a/four.html
+++ b/four.html
@@ -3,9 +3,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="four.css">
 </head>
 <body>
-    
+    <ul class="navlist">
+        <div class="navborder"> <li id="homeLink" ><a href="home.html">The Grand Atrium</a></li></div>
+        <div class="navborder">
+         <li><a href="two.html">Arcade</a></li>
+         <li><a href="three.html">Food Court</a></li> </div>
+         <div class="navborder">
+         <li><a href="five.html">Movie Theater</a></li></div> 
+       </ul> 
+
+    <div>
+     <h1 class="head">REC</h1>
+     <h3 class="company">Renewable Energy Company</h3>
+    </div>
+   <br>
+   <div class="aboutus">
+    <h2>About us!</h2>
+   <p class="firstparagraph">Welcome to REC the first choice for solar renewable energy here to help our local community in purchasing and installing affordable solar panels to you home or business for renewable energy! </p>
+   </div>
+   <div>
+     <h2 class="whysolar">Why choose solar?</h2>
+     <ol class="solarlist">
+        <li>The source of solar energy—the sun—is nearly limitless and can be accessed anywhere on earth at one time or another. It would take around 10 million acres of land—or only 0.4% of the area of the United States—to allow enough space for solar photovoltaics (PV) to supply all of our nation’s electricity.  </li>
+        <li>Solar panel installation costs are way down. The cost of solar panel installation is less than $3 a watt; a whopping 65% decrease from $8.50 per watt 10 years ago.</li>
+        <li>New solar technologies are capturing more and more of the sun’s rays. The National Renewable Energy Laboratory has created six-junction solar cells that convert 47% of the captured sunlight into electricity—by comparison, most commercially available modules convert less than 20%.</li>
+        <li>Silicon solar cells can withstand the test of time. In 1954, Bell Laboratories built the first silicon solar cell—the template for nearly all of the solar PV technologies in use today.</li>
+        <li>Solar can help restart the grid if it goes down. Typically, a signal from a spinning turbine—like that from a coal or natural gas plant—is required to “set the beat” of the grid. Now, DOE research is support advanced solar system that can take the lead, restarting the grid if no spinning turbine is available.</li>
+        <li>Solar has been one of the top three new sources of generation added to the grid in the last seven years. In fact, solar provides 30% of the new electricity produced in the United States in 2019, up from just 4% in 2010.</li>
+        <li>Solar is an economic engine—about 250,000 people work in the U.S. solar industry these days and there are more than 10,000 solar businesses around the country.</li>
+        <li>Solar costs have fallen dramatically. The cost of an average-size residential solar energy system decreased 55% between 2010 and 2018, from $40,000 to $18,000—and that’s before factoring in incentives like the solar Investment Tax Credit. DOE is also focusing on reducing financing burdens and red tape for American families who choose to go solar.</li>
+        <li>Solar panels are a manufactured product that take significantly less energy to fabricate than they produce over their lifetime.</li>
+     </ol>
+   </div>
+   <img src="https://cdn.pixabay.com/photo/2017/03/13/07/34/photovoltaic-2138992_1280.jpg" alt="solarfarm">
+
 </body>
 </html>
