Tyler-added more touch ups to page

--- a/four.html
+++ b/four.html
@@ -38,7 +38,18 @@
         <li>Solar panels are a manufactured product that take significantly less energy to fabricate than they produce over their lifetime.</li>
      </ol>
    </div>
-   <img src="https://cdn.pixabay.com/photo/2017/03/13/07/34/photovoltaic-2138992_1280.jpg" alt="solarfarm">
-
+   <br>
+   <div class="bar"></div>
+   <div class="farmphoto">
+     <img src="https://cdn.pixabay.com/photo/2017/08/21/20/29/solar-2666770_640.jpg" alt="solar panels on home">
+     <img src="https://cdn.pixabay.com/photo/2017/03/13/07/34/photovoltaic-2138992_1280.jpg" alt="solar farm"
+     width="550px" height="427px"
+     >
+     <img src="https://cdn.pixabay.com/photo/2019/10/04/09/46/photovoltaic-4525177_640.jpg" alt="solar set up at business">
+   </div>
+   <div class="location">
+    <h1>LOCATED AT THE GRAND ATRIUM</h1>
+    <h3>Come in and consult with us today for free overview on how to get started with solar! </h3>
+   </div>
 </body>
 </html>
