tyler-added fonts page 4

--- a/four.html
+++ b/four.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="four.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Baskervville+SC&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <ul class="navlist">
@@ -18,6 +21,7 @@
     <div>
      <h1 class="head">REC</h1>
      <h3 class="company">Renewable Energy Company</h3>
+     <h4 class="location">Located at The Grand Atrium</h4>
     </div>
    <br>
    <div class="aboutus">
