--- a/four.html
+++ b/four.html
@@ -10,12 +10,17 @@
 </head>
 <body>
     <ul class="navlist">
-        <div class="navborder"> <li id="homeLink" ><a href="home.html">The Grand Atrium</a></li></div>
-        <div class="navborder">
-         <li><a href="two.html">Arcade</a></li>
-         <li><a href="three.html">Food Court</a></li> </div>
-         <div class="navborder">
-         <li><a href="five.html">Movie Theater</a></li></div> 
+        <div > 
+          <li class="homeLink"><a href="home.html" class="homeLink">The Grand Atrium</a></li>
+        </div>
+        <div>
+         <li class="homeLink"><a href="two.html" class="homeLink">Arcade</a></li></div>
+         <div>
+           <li class="homeLink"><a href="three.html" class="homeLink">Food Court</a></li> 
+            </div>
+         <div>
+           <li class="homeLink"><a href="five.html" class="homeLink">Movie Theater</a></li>
+          </div> 
        </ul> 
 
     <div>
@@ -31,7 +36,7 @@
    <div>
      <h2 class="whysolar">Why choose solar?</h2>
      <ol class="solarlist">
-        <li>The source of solar energy—the sun—is nearly limitless and can be accessed anywhere on earth at one time or another. It would take around 10 million acres of land—or only 0.4% of the area of the United States—to allow enough space for solar photovoltaics (PV) to supply all of our nation’s electricity.  </li>
+        <li>The source of  solar energy—the sun—is nearly limitless and can be accessed anywhere on earth at one time or another. It would take around 10 million acres of land—or only 0.4% of the area of the United States—to allow enough space for solar photovoltaics (PV) to supply all of our nation’s electricity.  </li>
         <li>Solar panel installation costs are way down. The cost of solar panel installation is less than $3 a watt; a whopping 65% decrease from $8.50 per watt 10 years ago.</li>
         <li>New solar technologies are capturing more and more of the sun’s rays. The National Renewable Energy Laboratory has created six-junction solar cells that convert 47% of the captured sunlight into electricity—by comparison, most commercially available modules convert less than 20%.</li>
         <li>Silicon solar cells can withstand the test of time. In 1954, Bell Laboratories built the first silicon solar cell—the template for nearly all of the solar PV technologies in use today.</li>
@@ -55,5 +60,15 @@
     <h1>LOCATED AT THE GRAND ATRIUM</h1>
     <h3>Come in and consult with us today for free overview on how to get started with solar! </h3>
    </div>
+   
+   <div class="foot">
+    <div class="footone"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_mw.png?mh=480&mw=480&rev=1eab39dcacf44ee9a83d974276ea258e&extension=webp&hash=4D10DB0F1CD0D09ABD8D76F2833B3BA0" alt="Lightning Bolt" height="300px" width="500px" class="footimg"><h2 class="footfont">600 megawatts</h2><p>Our solar farms are generating over 600 megawatts of clean, affordable power.</p></div>
+    <div class="foottwo"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_cost.png?mh=480&mw=480&rev=2b9e8252f97d4e788c39518b601d15b7&extension=webp&hash=6387450F9697614803E9DED56B70697D" alt="Down Arrow" height="300px" width="500px" class="footimg"><h2 class="footfont"> < 70% </h2><p>The cost of building a utility scale solar project has declined by 70% over the past ten years.</p></div>
+    <div class="footthree"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_construction.png?mh=480&mw=480&rev=81e4e9750ad2430d89ec118eeba3d39e&extension=webp&hash=47D9EAAADD4B2D943EEFC580ABE984E8" alt="Helmet" height="300px" width="500px" class="footimg"><h2 class="footfont">700 megawatts</h2><p>We have nearly 700 megawatts of solar and battery storage projects under construction.</p></div>
+   </div>
+
+
+
+
 </body>
 </html>
