--- a/two.html
+++ b/two.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="two.css">
   <title>Document</title>
 </head>
 
 <body>
+  <ul class="navbar">
+    <li id="homeLink" ><a href="home.html">The Grand Atrium</a></li>
+    <li><a href="two.html">Arcade</a></li>
+    <li><a href="three.html">Food Court</a></li>
+    <li><a href="five.html">Movie Theater</a></li>
+    <li><a href="four.html">Solar Technology</a></li>
+  </ul>
+
   <h1 class="header">Penny Arcade</h1>
 
   <div class="row">
