--- a/five.html
+++ b/five.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+
+    <ul class="navlist">
+        <div > 
+          <li class="homeLink"><a href="home.html" class="homeLink">The Grand Atrium</a></li>
+        </div>
+        <div>
+         <li class="homeLink"><a href="two.html" class="homeLink">Arcade</a></li></div>
+         <div>
+           <li class="homeLink"><a href="three.html" class="homeLink">Food Court</a></li> 
+            </div>
+         <div>
+           <li class="homeLink"><a href="four.html" class="homeLink">Solar Store</a></li>
+          </div> 
+       </ul> 
+
+
+
     <h1 class="header">Regal Cinemas</h1>
     <h1 class="header1">at Grand Atrium</h1> 
     
