--- a/five.html
+++ b/five.html
@@ -19,7 +19,7 @@
            <li class="homeLink"><a href="three.html" class="homeLink">Food Court</a></li> 
             </div>
          <div>
-           <li class="homeLink"><a href="four.html" class="homeLink">Solar Store</a></li>
+           <li class="homeLink"><a href="four.html" class="homeLink">Renewable Energy Company</a></li>
           </div> 
        </ul> 
 
@@ -43,5 +43,22 @@
     <div class="three">
         <img src="images5/coming soon movie list.JPG" alt="movies coming soon" width="2000" height="500">
     </div>
+    <br>
+    <br>
+    <div id="specialmovienights">
+        <h2>Special Movie Nights</h2>
+        <ul class="schedule">
+          <li class="schedule-item1">
+              <h2>Family Fun Fridays - Family Movie Night</h2>
+              <span>Time:</span> 3:00 PM - 11:00 PM
+              <p class="details">Enjoy movie night out with the family. Family friendly movies all night for just $5 per family member. Enjoy Family Fun Fridays every Friday night.</p>
+          </li>
+          <li class="schedule-item2">
+              <h2>Super Old School Sundays</h2>
+              <span>Time:</span> 12:00 PM - 6:00 PM
+              <p class="details">Enjoy all the favorite old school movies from your past for just $2 every Sunday. You can also enjoy Super old school Black and White movies all Sunday long for only $1.</p>
+          </li>
+        </ul>  
+          
 </body>
 </html>
