added image to homepage

--- a/home.html
+++ b/home.html
@@ -29,6 +29,11 @@
       </div>
       <br>
       <br>
+      <div class="image">
+        <img src="images/EatWatchPlayShop.JPG" alt="Eat Watch Shop Play" width="2500" height="500">
+      </div> 
+      <br>
+      <br>
       <div class="foot">
         <div>
            <img src="https://cdn-icons-png.flaticon.com/128/854/854878.png" alt="map icon" height="50px" width="50px">
