Tyler added foot to home page

--- a/four.html
+++ b/four.html
@@ -8,19 +8,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Baskervville+SC&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+  <body>
     <ul class="navlist">
-        <div > 
+        <div> 
           <li class="homeLink"><a href="home.html" class="homeLink">The Grand Atrium</a></li>
         </div>
         <div>
-         <li class="homeLink"><a href="two.html" class="homeLink">Arcade</a></li></div>
+         <li class="homeLink"><a href="two.html" class="homeLink">Arcade</a></li>
+        </div>
          <div>
-           <li class="homeLink"><a href="three.html" class="homeLink">Food Court</a></li> 
-            </div>
+            <li class="homeLink"><a href="three.html" class="homeLink">Food Court</a></li> 
+         </div>
          <div>
            <li class="homeLink"><a href="five.html" class="homeLink">Movie Theater</a></li>
-          </div> 
+         </div> 
        </ul> 
 
     <div>
@@ -30,8 +31,8 @@
     </div>
    <br>
    <div class="aboutus">
-    <h2>About us!</h2>
-   <p class="firstparagraph">Welcome to REC the first choice for solar renewable energy here to help our local community in purchasing and installing affordable solar panels to you home or business for renewable energy! </p>
+     <h2>About us!</h2>
+     <p class="firstparagraph">Welcome to REC the first choice for solar renewable energy here to help our local community in purchasing and installing affordable solar panels to you home or business for renewable energy! </p>
    </div>
    <div>
      <h2 class="whysolar">Why choose solar?</h2>
@@ -57,19 +58,19 @@
      <img src="https://cdn.pixabay.com/photo/2019/10/04/09/46/photovoltaic-4525177_640.jpg" alt="solar set up at business">
    </div>
    <div class="location">
-    <h1>LOCATED AT THE GRAND ATRIUM</h1>
-    <h3>Come in and consult with us today for free overview on how to get started with solar! </h3>
+     <h1>LOCATED AT THE GRAND ATRIUM</h1>
+     <h3>Come in and consult with us today for free overview on how to get started with solar! </h3>
    </div>
    
    <div class="foot">
-    <div class="footone"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_mw.png?mh=480&mw=480&rev=1eab39dcacf44ee9a83d974276ea258e&extension=webp&hash=4D10DB0F1CD0D09ABD8D76F2833B3BA0" alt="Lightning Bolt" height="300px" width="500px" class="footimg"><h2 class="footfont">600 megawatts</h2><p>Our solar farms are generating over 600 megawatts of clean, affordable power.</p></div>
-    <div class="foottwo"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_cost.png?mh=480&mw=480&rev=2b9e8252f97d4e788c39518b601d15b7&extension=webp&hash=6387450F9697614803E9DED56B70697D" alt="Down Arrow" height="300px" width="500px" class="footimg"><h2 class="footfont"> < 70% </h2><p>The cost of building a utility scale solar project has declined by 70% over the past ten years.</p></div>
-    <div class="footthree"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_construction.png?mh=480&mw=480&rev=81e4e9750ad2430d89ec118eeba3d39e&extension=webp&hash=47D9EAAADD4B2D943EEFC580ABE984E8" alt="Helmet" height="300px" width="500px" class="footimg"><h2 class="footfont">700 megawatts</h2><p>We have nearly 700 megawatts of solar and battery storage projects under construction.</p></div>
+     <div class="footone"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_mw.png?mh=480&mw=480&rev=1eab39dcacf44ee9a83d974276ea258e&extension=webp&hash=4D10DB0F1CD0D09ABD8D76F2833B3BA0" alt="Lightning Bolt" height="300px" width="500px" class="footimg"><h2 class="footfont">600 megawatts</h2><p>Our solar farms are generating over 600 megawatts of clean, affordable power.</p></div>
+     <div class="foottwo"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_cost.png?mh=480&mw=480&rev=2b9e8252f97d4e788c39518b601d15b7&extension=webp&hash=6387450F9697614803E9DED56B70697D" alt="Down Arrow" height="300px" width="500px" class="footimg"><h2 class="footfont"> < 70% </h2><p>The cost of building a utility scale solar project has declined by 70% over the past ten years.</p></div>
+     <div class="footthree"><img src="https://orstedcdn.azureedge.net/-/media/www/images/corp/us/onshore-and-solar/solar-and-storage-page/solar-pictograms_construction.png?mh=480&mw=480&rev=81e4e9750ad2430d89ec118eeba3d39e&extension=webp&hash=47D9EAAADD4B2D943EEFC580ABE984E8" alt="Helmet" height="300px" width="500px" class="footimg"><h2 class="footfont">700 megawatts</h2><p>We have nearly 700 megawatts of solar and battery storage projects under construction.</p></div>
    </div>
    <br>
    <br>
    <div class="back">
-    <a href="#">Back to top</a>
+     <a href="#">Back to top</a>
    </div>
 
 
