--- a/home.html
+++ b/home.html
@@ -3,7 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- <h1> Welcome To The Grand Atrium</h1> -->
@@ -24,5 +27,37 @@
       <div class="div1">
         EAT. WATCH. SHOP. PLAY.
       </div>
+      <br>
+      <br>
+      <div class="foot">
+        <div>
+           <img src="https://cdn-icons-png.flaticon.com/128/854/854878.png" alt="map icon" height="50px" width="50px">
+           <p>111 Grand Atrium
+            ALBANY, NY 12210
+           </p>
+         </div>
+         <div>
+           <img src="https://cdn-icons-png.flaticon.com/128/17699/17699603.png" alt="cell phone" height="50px" width="50px">
+           <p>MANAGEMENT:
+            518.888.8880 EXT.231 |
+            SECURITY OFFICES: 518.888.8888</p>
+         </div>
+         <div>
+           <img src="https://cdn-icons-png.flaticon.com/128/2784/2784459.png" alt="clock" height="50px" width="50px">
+           <p>Monday-Saturday
+            10:00am - 8:00pm |
+            Sunday
+            11:00am - 6:00pm |
+            Individual store & restaurant hours may vary.</p>
+         </div>
+        <div>
+           <h1>FOLLOW US</h1>
+           <a href="https://www.facebook.com/"> <img src="https://cdn-icons-png.flaticon.com/128/733/733547.png" alt="facebook" height="50px" width="50px"></a>
+           <a href="https://www.instagram.com/"> <img src="https://cdn-icons-png.flaticon.com/128/174/174855.png" alt="instagram" height="50px" width="50px"></a>
+           <a href="https://x.com/"><img src="https://cdn-icons-png.flaticon.com/128/5968/5968958.png" alt="X" height="50px" width="50px"></a>
+        </div>
+      </div>
+
+  
 </body>
 </html>
